src/objects/Opportunity_Product__c.object
<CustomObject>
    <fields>
        <fullName>Base_or_Upgrade__c</fullName>
        <label>Base or Upgrade</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Member_Excess__c</fullName>
        <label>Employer/Member Excess</label>
        <picklist>
            <picklistValues>
                <fullName>Employer Excess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Excess_Amount__c</fullName>
        <label>Excess Amount</label>
        <picklist>
            <picklistValues>
                <fullName>$100(S)/$200(F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250(S)/$500(F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200(S)/$400(F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500(S)/$1000(F)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extras_Product__c</fullName>
        <label>Extras Product</label>
        <picklist>
            <picklistValues>
                <fullName>Added Value Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantage 80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget 50 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget 60 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business 60 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business 80 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business 85 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business 90 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Plus Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essential Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essential Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everyday Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everyday Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Ancillary Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super U Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior Lite Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 70 Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 70 Lifestyle Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Lifestyle Benefits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Product__c</fullName>
        <label>Hospital Product</label>
        <picklist>
            <picklistValues>
                <fullName>Complete Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Choice Hospital Saver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Choice Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricepoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Plus Cover_NonRHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic Plus Hospital &amp; Standard Medical Cover_NonRHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimum Hospital with Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimum Plus Hospital with Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatriate Hospital &amp; Medical Cover_NonRHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic Plus Hospital Cover with Medical Benefits_RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimum Hospital with Medical_RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimum Plus Hospital with Medical_RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatriate Basic Hospital Cover with Medical Benefits_RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatriate Hospital Cover with Medical Benefits_RHCA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Product_Name__c</fullName>
        <formula>TEXT(Hospital_Product__c)  &amp; &quot; &quot; &amp;  TEXT(Excess_Amount__c)  &amp; &quot; &quot; &amp;  TEXT(Employer_Member_Excess__c) &amp; &quot; &quot; &amp;  TEXT(Extras_Product__c) &amp; &quot; &quot; &amp;  TEXT(Base_or_Upgrade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Product Name</label>
        <type>Text</type>
    </fields>
    <label>Opp Requested Product</label>
    <nameField>
        <displayFormat>OP{000000}</displayFormat>
        <label>Requested Product Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Requested Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>